# sbpf-dbg

./: .gitignore  Cargo.toml  README.md
crates/debugger/: Cargo.toml
crates/debugger-input/: Cargo.toml  README.md
crates/debugger-input/src/: lib.rs
crates/debugger/src/: adapter.rs  build.rs  debugger.rs  main.rs  parser.rs  syscalls.rs
extension/: .vscodeignore  package-lock.json  package.json  readme.md  tsconfig.json
extension/sample/: .gitignore  Cargo.toml  README.md
extension/sample/src/: lib.rs
extension/sample/src/sample/: nested.s  sample.s
extension/src/: activateDebug.ts  debugAdapter.ts  extension.ts  sbpfDebugSession.ts  sbpfRuntime.ts  web-extension.ts
src/: adapter.rs  build.rs  debugger.rs  error.rs  main.rs  repl.rs  syscalls.rs
test_programs/: hello_solana.s
