[package]
name = "sbpf-dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
solana-sbpf = { git = "https://github.com/bidhan-a/sbpf", branch = "sbpf-dbg" }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
gimli = "0.32.0"
object = "0.37.1"
memmap2 = "0.9.5"
base64 = "0.21.7"
sha2 = "0.10.8"
sha3 = "0.10.8"
solana-program-runtime = "2.3.7"
